[package]
name = "rssify"
version = "0.1.0"
edition = "2024"

[lib]
name = "rssify"
path = "src/lib.rs"

[[bin]]
name = "rssify-cli"
path = "src/bin/cli.rs"
# required-features = ["cli"]

[dependencies]
tokio = { version = "1.46.0", features = ["full"] }
futures = "0.3.31"
reqwest = "0.12.22"
scraper = "0.23.1"
regex = "1.11.1"
chrono = "0.4.41"
rss = "2.0.12"
mini-redis = "0.4.1"
tokio-postgres = "0.7.13"
clap = { version = "4.5.42", features = ["derive"] }
json = "0.12.4"
